# yeet-yoink

./: .env.example  CHANGELOG.md  Cargo.toml  README.md  Taskfile.dist.yaml  build.rs  docker-compose.yml  example-config.yaml
.github/workflows/: rust.yml
bins/server/: Cargo.toml  build.rs
bins/server/src/: backend_registry.rs  logging.rs  main.rs  protobuf.rs
bins/server/src/backbone/: backbone.rs  file_accessor.rs  file_reader.rs  file_record.rs  file_writer.rs  file_writer_guard.rs  mod.rs
bins/server/src/backends/: dyn_backend.rs  mod.rs  registry.rs
bins/server/src/backends/memcache/: backend.rs
bins/server/src/handlers/: health.rs  metrics.rs  mod.rs  shutdown.rs  yeet.rs  yoink.rs
bins/server/src/metrics/: http.rs
bins/server/src/services/: metrics.rs  mod.rs
bins/server/test/: probes.http  yeet_yoink.http
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs  memcache.rs
crates/backbone/: Cargo.toml
crates/backbone-traits/: Cargo.toml
crates/backbone-traits/src/: file_accessor.rs  file_reader.rs  lib.rs
crates/backbone/src/: backbone.rs  file_accessor.rs  file_reader.rs  file_record.rs  file_writer.rs  file_writer_guard.rs  lib.rs
crates/backend-memcache/: Cargo.toml
crates/backend-memcache/src/: backend.rs  connection_string.rs  lib.rs
crates/backend-traits/: Cargo.toml
crates/backend-traits/src/: backend.rs  backend_command.rs  backend_info.rs  distribute_file.rs  dyn_backend.rs  from_config.rs  lib.rs  receive_file.rs  registration.rs
crates/file-distribution/: Cargo.toml  build.rs
crates/file-distribution/src/: file_accessor.rs  file_hashes.rs  file_provider.rs  file_reader.rs  hash.rs  lib.rs  protobuf.rs  write_summary.rs
crates/file_distribution/: Cargo.toml
crates/file_distribution/src/: file_hashes.rs  lib.rs  write_summary.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: http.rs  lib.rs  transfer.rs
proto/: metadata.proto
src/: app_config.rs  bind.rs  commands.rs  health.rs  main.rs  metrics.rs  shutdown_rendezvous.rs  wrapped_temporary.rs
src/backbone/: backbone.rs  file_hashes.rs  file_reader.rs  file_record.rs  file_writer.rs  file_writer_guard.rs  hash.rs  mod.rs  writer.rs  writer_guard.rs
src/backends/: map_ok.rs  memcache.rs  mod.rs  registry.rs
src/backends/memcache/: backend.rs  config.rs  connection_string.rs
src/filters/: health.rs  metrics.rs  mod.rs  shutdown.rs  yeet.rs
src/handlers/: health.rs  metrics.rs  mod.rs  shutdown.rs  yeet.rs  yoink.rs
src/headers/: content_md5.rs  mod.rs
src/hosting/: connection_handler.rs  incoming_stream.rs  mod.rs  tower_to_hyper_service.rs
src/metrics/: http.rs  mod.rs  transfer.rs
src/services/: metrics.rs  mod.rs  shutdown.rs
test/: http-client.env.json  yeet_yoink.http
utils/: yeet.sh  yoink.sh
