[package]
name = "yeet-yoink"
version = "0.0.1"
description ="A file storage API"
license = "EUPL-1.2"
keywords = ["file-storage", "cloud-storage"]
repository = "https://github.com/sunsided/yeet-yoink"
readme = "README.md"
authors = ["Markus Mayer"]
edition = "2021"
rust-version = "1.68.0"

[dependencies]
anyhow = "1.0.71"
async-tempfile = "0.4.0"
axum = { version = "0.6.18", features = ["http2", "headers", "macros", "json"] }
base64 = "0.21.2"
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["env"] }
crossbeam = "0.8.2"
ctrlc = { version = "3.4.0", features = ["termination"] }
dotenvy = "0.15.7"
exitcode = "1.1.2"
futures = "0.3.28"
headers-content-md5 = "0.1.0"
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["http1", "http2", "server", "h2"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
pin-project = "1.1.0"
problemdetails = { version = "0.2.1", features = ["axum"] }
prometheus-client = "0.21.1"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.7"
shared-files = "0.0.8"
shortguid = { version = "0.5.0", features = ["serde"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.4.13", features = ["tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "parking_lot", "tracing-log", "json"] }
uuid = { version = "1.3.4", features = ["v1", "rng", "serde"] }
