[package]
name = "yeet-yoink"
version = "0.1.0-unstable"
description ="A file storage API"
license = "EUPL-1.2"
keywords = ["file-storage", "cloud-storage"]
repository = "https://github.com/sunsided/yeet-yoink"
readme = "README.md"
authors = ["Markus Mayer"]
edition = "2021"
rust-version = "1.68.0"

[features]
default = ["memcache"]
memcache = ["dep:memcache", "dep:r2d2-memcache", "dep:r2d2"]

[dependencies]
anyhow = "1.0.75"
async-tempfile = "0.4.0"
axum = { version = "0.7.1", features = ["http2", "macros", "json"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["env"] }
config = "0.13.4"
crossbeam = "0.8.2"
ctrlc = { version = "3.4.1", features = ["termination"] }
directories = "5.0.1"
dotenvy = "0.15.7"
exitcode = "1.1.2"
futures = "0.3.29"
futures-util = "0.3.29"
headers = "0.4.0"
headers-content-md5 = "0.2.0"
hex = "0.4.3"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.1", features = ["server"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
memcache = { version = "0.17.1", optional = true }
mime-db = "1.7.0"
percent-encoding = "2.3.1"
pin-project = "1.1.3"
problemdetails = { version = "0.3.0", features = ["axum"] }
prometheus-client = "0.22.0"
r2d2 = { version = "0.8.10", optional = true }
r2d2-memcache = { version = "0.6.0", optional = true }
rendezvous = { version = "0.2.0", features = ["tokio", "log"] }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
shared-files = "0.0.8"
shortguid = { version = "0.6.0", features = ["serde"] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["tokio"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "tracing-log", "json"] }
uuid = { version = "1.6.1", features = ["v1", "rng", "serde"] }

[dev-dependencies]
serde_yaml = "0.9.27"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
