[package]
name = "app-config"
version = "0.1.0"
edition = "2021"

[features]
memcache = []

[dependencies]
clap = "4.5.4"
config = "0.13.4"
serde = "1.0.203"
tracing = "0.1.40"
anyhow = "1.0.86"
matches = "0.1.10"
thiserror = "1.0.60"
url = "2.5.0"

[dev-dependencies]
serde_yaml = "0.9.34"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
