[package]
name = "app-config"
version = "0.1.0"
edition = "2024"

[features]
memcache = []

[dependencies]
clap = "4.6.1"
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
anyhow = "1.0.102"
matches = "0.1.10"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
serde_yaml = "0.9.34"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
