[package]
name = "backend-memcache"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { version = "0.1.0", path = "../app-config", features = ["memcache"] }
async-trait = "0.1.83"
backend-traits = { version = "0.1.0", path = "../backend-traits" }
file-distribution = { version = "0.1.0", path = "../file-distribution" }
map-ok = "1.0.0"
memcache = "0.18.0"
r2d2 = "0.8.10"
r2d2-memcache = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
shortguid = "0.7.0"
thiserror = "2.0.3"
tokio = { version = "1.39.2", default-features = false, features = ["rt"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
tracing = "0.1.40"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
