[package]
name = "backend-memcache"
version = "0.1.0"
edition = "2024"

[dependencies]
app-config = { version = "0.1.0", path = "../app-config", features = ["memcache"] }
async-trait = "0.1.89"
backend-traits = { version = "0.1.0", path = "../backend-traits" }
file-distribution = { version = "0.1.0", path = "../file-distribution" }
map-ok = "1.0.0"
memcache = "0.19.0"
r2d2 = "0.8.10"
r2d2-memcache = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
shortguid = "0.7.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
tracing = "0.1.44"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
