[package]
name = "backend-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { version = "0.1.0", path = "../app-config" }
async-trait = "0.1.80"
file-distribution = { version = "0.1.0", path = "../file-distribution" }
shortguid = "0.6.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", default-features = false, features = ["rt", "sync"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
