[package]
name = "backend-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { version = "0.1.0", path = "../app-config" }
async-trait = "0.1.86"
file-distribution = { version = "0.1.0", path = "../file-distribution" }
shortguid = "0.7.0"
thiserror = "2.0.3"
tokio = { version = "1.39.2", default-features = false, features = ["rt", "sync"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
