[package]
name = "file-distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tempfile = "0.5.0"
async-trait = "0.1.80"
bytes = "1.6.0"
md5 = "0.7.0"
prost = "0.12.6"
prost-derive = "0.12.6"
sha2 = "0.10.8"
shared-files = "0.2.0"
shortguid = "0.7.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", default-features = false, features = ["time"] }

[build-dependencies]
prost-build = "0.12.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
