[package]
name = "file-distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tempfile = "0.5.0"
async-trait = "0.1.80"
bytes = "1.6.0"
md5 = "0.7.0"
prost = "0.12.6"
prost-derive = "0.13.1"
sha2 = "0.10.8"
shared-files = "0.1.0"
shortguid = "0.6.0"
thiserror = "1.0.63"
tokio = { version = "1.38.1", default-features = false, features = ["time"] }

[build-dependencies]
prost-build = "0.13.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
