[package]
name = "file-distribution"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tempfile = "0.8.0"
async-trait = "0.1.89"
bytes = "1.11.1"
hex = "0.4.3"
md5 = "0.8.0"
prost = "0.14.4"
prost-derive = "0.14.3"
sha2 = "0.11.0"
shared-files = "0.4.0"
shortguid = "0.7.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["time"] }

[build-dependencies]
prost-build = "0.14.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
